# delivery_service

./: .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  README  README.md  alembic.ini  docker-compose.yml  ngrok.dist.yml  prod.yml  pyproject.toml
backend/: .dockerignore  .env.dist  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml
backend/app/: index.html  main.py
backend/app/_mock_data_/: user_addr.py
backend/app/routes/: getGeocode.py
backend/application/: bot_start.py  change_user_role.py  get_user.py  get_users.py
backend/application/commands/bot/: admin_bot_start.py  shop_bot_start.py
backend/application/commands/employee/: add_employee.py  edit_employee.py  remove_employee.py
backend/application/commands/goods/: add_goods.py  delete_goods.py  edit_goods.py  input_data.py
backend/application/commands/order/: create_order.py  delete_order.py  edit_order_item_quantity.py  remove_order_item.py
backend/application/commands/shop/: change_regular_days_off.py  change_special_days_off.py  create_shop.py  delete_shop.py  resume_shop.py  setup_all_shops.py  stop_shop.py
backend/application/commands/user/: create_user.py
backend/application/common/: access_service.py  commiter.py  dto.py  file_manager.py  geo.py  identity_provider.py  interactor.py  specification.py  transaction_manager.py  uow.py  validators.py  webhook_manager.py
backend/application/common/errors/: access.py  base.py  employee.py  gateway.py  goods.py  order.py  shop.py  user.py
backend/application/common/gateways/: user.py
backend/application/common/persistence/: employee.py  filters.py  goods.py  order.py  shop.py  user.py  view_models.py
backend/application/common/specs/: length.py  pattern.py  value.py
backend/application/common/validators/: shop.py  user.py
backend/application/employee/: errors.py  gateway.py  output_data.py
backend/application/employee/commands/: add_employee.py  change_employee_role.py  edit_employee.py  remove_employee.py
backend/application/employee/interactors/: add_employee.py  remove_employee.py
backend/application/employee/queries/: get_employee_card.py  get_employees_cards.py
backend/application/employee/query/: get_employee_card.py  get_employees_cards.py
backend/application/errors/: access.py  gateway.py  user.py
backend/application/goods/: errors.py  gateway.py  input_data.py
backend/application/goods/interactors/: add_goods.py  delete_goods.py  edit_goods.py  edit_goods_pic.py  get_goods.py  get_many_goods.py  get_many_goods_by_admin.py
backend/application/order/: errors.py  gateway.py  shop_validate.py
backend/application/order/interactors/: create_order.py  delete_order.py  delete_order_item.py  edit_order_item_quantity.py  get_order.py
backend/application/profile/: errors.py  gateway.py
backend/application/profile/commands/: check_address_by_coordinates.py  check_address_by_row.py  update_address_by_yourself.py  update_phone_number_by_yourself.py
backend/application/profile/data/: output.py
backend/application/profile/queries/: get_profile_card.py
backend/application/profile/query/: get_profile_card.py
backend/application/queries/employee/: get_employees.py
backend/application/queries/goods/: get_many_goods.py  get_many_goods_by_admin.py
backend/application/queries/order/: get_order.py
backend/application/shop/: errors.py  gateway.py  shop_validate.py  token_verifier.py
backend/application/shop/interactors/: change_regular_days_off.py  change_special_days_off.py  create_shop.py  delete_shop.py  get_shops.py  resume_shop.py  setup_all_shops.py  stop_shop.py
backend/application/shop/queries/: get_shop_info.py
backend/application/specs/: has_role.py
backend/application/user/: errors.py  gateway.py
backend/application/user/commands/: admin_bot_start.py  create_user.py  shop_bot_start.py
backend/application/user/dto/: user.py
backend/application/user/errors/: user.py
backend/application/user/gateways/: user.py
backend/application/user/interactors/: admin_bot_start.py  bot_start.py  change_user_role.py  get_user.py  get_users.py  shop_bot_start.py
backend/domain/entities/: user.py
backend/domain/errors/: user.py
backend/domain/shop/: service.py
backend/domain/value_objects/: phone_number.py  user_id.py
backend/entities/common/: entity.py  errors.py  tracker.py  vo.py
backend/entities/employee/: errors.py  models.py  services.py
backend/entities/goods/: errors.py  models.py  service.py  value_objects.py
backend/entities/order/: errors.py  models.py  service.py  value_objects.py
backend/entities/profile/: errors.py  models.py  services.py  value_objects.py
backend/entities/shop/: errors.py  model.py  models.py  service.py  services.py  value_objects.py
backend/entities/user/: errors.py  model.py  models.py  services.py  value_objects.py
backend/entrypoint/: bot.py  config.py
backend/infrastructure/auth/: tg_auth.py
backend/infrastructure/bootstrap/: configs.py  di.py
backend/infrastructure/gateways/: converters.py  employee.py  goods.py  order.py  profile.py  shop.py  user.py
backend/infrastructure/geopy/: config.py  errors.py  geopy_processor.py  provider.py
backend/infrastructure/persistence/: commiter.py  config.py  provider.py  tracker.py  transaction_manager.py  uow.py
backend/infrastructure/s3/: config.py  file_manager.py
backend/infrastructure/tg/: bot_webhook_manager.py  config.py  errors.py  token_verifier.py
backend/presentation/admin/: consts.py  helpers.py  states.py
backend/presentation/bot/: consts.py  setup.py  start.py  states.py
backend/presentation/common/: consts.py  helpers.py
backend/presentation/shop/: main_keyboard.py
backend/tests/unit/: conftest.py
(+482 files in other folders)
