[tool.poetry]
name = "delivery-service"
version = "0.1.0"
description = ""
authors = ["Andrii <andryxakulishow@gmail.com>"]
readme = "README.md"
packages = [{ include = "delivery_service", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
uuid7 = "^0.1.0"
geopy = "^2.4.1"
aiohttp = "^3.11.13"
bazario = "^0.4.2"
aiogram = "^3.19.0"
redis = "^5.2.1"
sqlalchemy = "^2.0.40"
alembic = "^1.15.1"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
pyright = "^1.1.394"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ['ALL']

ignore = [
    # Rules emitting false alerts
    'N804',
    'B008',
    'BLE001',
    'RUF009',
    'RUF001',
    # Rules that are not applicable in the project for now
    'D',
    'TID252',
    'D104',
    'ANN',
    'SLF001',
    'ARG',
    'D100',
    'PLR0913',
    'TCH002',
    'EXE002',
    'FA102',
    # Strange and obscure rules that will never be turned on
    'ANN101',
    'FA100',
    'TRY003',
    'TRY201',
    'EM',
    'PERF203',
    'TCH001',
    'TD002',
    'PTH201',
    'RSE102',
    'RET504',
    'FBT001',
    'TD003',
    'B024',
    'ISC001',
    'B027',
    'COM812'
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ['F401']

"test_*" = ['S101', 'PLR2004', 'PT023', 'PT001', 'PT006']
"conftest.py" = ['PT023', 'PT001', 'PT006']

[tool.pyright]
venvPath = "/Users/plztrustme/Library/Caches/pypoetry/virtualenvs"
venv = "delivery-service-DrDL6_2h-py3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
