[tool.poetry]
name = "delivery-service"
version = "0.1.0"
description = "Backend for water delivery service"
authors = ["Andrii <andryxakulishow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dishka = "^1.2.0"
environs = "^11.0.0"
aiogram = "^3.10.0"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
greenlet = "^3.0.3"
aiogram-dialog = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
