[tool.poetry]
name = "delivery-service"
version = "0.1.0"
description = "Backend for water delivery service"
authors = ["Andrii <andryxakulishow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
environs = "^11.0.0"
aiogram = "^3.10.0"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
greenlet = "^3.0.3"
aiogram-dialog = { git = "https://github.com/Tishka17/aiogram_dialog.git", rev = "a37ae78738e921bb8a788e1ae6598ac6fa730052" }
geopy = "^2.4.1"
dishka = { git = "https://github.com/reagento/dishka", rev = "80fc5564b2688a76bfdce013bf0e96af9f9ca847" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

markers = [
    "user: test related to user context",
    "entities: test related to entities layer",
    "application: test related to application layer"
]

filterwarnings = "ignore::DeprecationWarning"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
